--- a/Arc/index.html
+++ b/Arc/index.html
@@ -94,10 +94,10 @@
         <!-- หน้า Home -->
         <div v-if="what_page == 'Home'" class="container">
             <div class="row">
-                <video data-aos-anchor-placement="top-center" data-aos="fade-right"
+                <video data-aos-anchor-placement="top-bottom" data-aos="fade-right"
                     src="Architecture/solve/homepage/Waterdrop1.mp4" autoplay muted style="margin: 0; left: -4vw;"
                     class="col-6 home_bg_vdo"></video>
-                <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6"
+                <div data-aos-anchor-placement="top-bottom" data-aos="fade-left" class="col-6"
                     style="padding-right: -5.15625vw;">
                     <p class="topic_text home_topic_text" style="color: #5382bf; font-size: 2.417999vw; width: 40vw;">
                         {{info.Home[0].LawName}}
@@ -109,13 +109,13 @@
             </div>
         </div>
 
-        <div data-aos="fade-up" data-aos-anchor-placement="top-center" v-if="what_page == 'Home'">
+        <div data-aos="fade-up" data-aos-anchor-placement="top-bottom" v-if="what_page == 'Home'">
 
             <video src="Architecture/solve/homepage/Frame3.mp4" autoplay muted style="margin: 0;" class="home_bg_vdo2">
                 <!-- <source src="Architecture/solve/homepage/Frame3.mp4" type="video/mp4"> -->
             </video>
             <div v-if="what_page == 'Home'" class="container">
-                <div data-aos-anchor-placement="top-center" data-aos="fade-down" class="home_text2">
+                <div data-aos-anchor-placement="top-bottom" data-aos="fade-down" class="home_text2">
                     <p class="topic_text home_topic_text2"
                         style="color: #5382bf; font-size: 2.418vw;     margin-left: -1.3vw;">
                         {{info.Home[1].LawName}}
