--- a/Arc/index.html
+++ b/Arc/index.html
@@ -591,10 +591,13 @@
             Blooming_flowers_gif(status, id) {
                 var index = parseInt(id.slice(3));
                 var img = document.getElementById(id);
+                // img.classList.remove('');
                 if (status) {
+                    // img.classList.add('');
                     img.src = this.flower_gif[index];
                     this.time_out = setTimeout(function () { img.src = app.flower_png[index]; }, 7250);
                 } else {
+                    // img.classList.add('');
                     clearTimeout(this.time_out);
                     img.src = this.seed_png[index];
                 }
