--- a/Arc/index.html
+++ b/Arc/index.html
@@ -595,7 +595,7 @@
                 if (status) {
                     // img.classList.add('');
                     img.src = this.flower_gif[index];
-                    this.time_out = setTimeout(function () { img.src = app.flower_png[index]; }, 7250);
+                    this.time_out = setTimeout(function () { img.src = app.flower_png[index];  }, 7250);// img.classList.add('');
                 } else {
                     // img.classList.add('');
                     clearTimeout(this.time_out);
@@ -614,7 +614,7 @@
         for (let index = 0; index < app.flower_gif.length; index++) {
             document.getElementById("load_gif"+index).remove();
         }
-     }, 30000);
+     }, 60000);
 
 </script>
 
