--- a/Arc/index.html
+++ b/Arc/index.html
@@ -132,7 +132,7 @@
                         @click="change_law('law0')">
                     </video>  -->
                     <br>
-                    <p>กฎหมายการเลือกตั้ง</p>
+                    <p class="text_seed_2">กฎหมายการเลือกตั้ง</p>
                 </div>
                 <div class="col align-self-center text-center" v-if="status_law[0]"><img @click="change_law('law0')" src="Architecture/solve/flower/Anotherredflower/Anotherredflower.png" style="width: 8.1828vw; height: 10.4361vw;"><br>
                     <p>กฎหมายการเลือกตั้ง</p>
@@ -144,7 +144,7 @@
                         id="vid6" width="200" height="250" muted style="margin: 0;" @click="change_law('law1')">
                      </video>  -->
                     <br>
-                    <p>กฎหมายลาคลอด</p>
+                    <p class="text_seed_2">กฎหมายลาคลอด</p>
                 </div>
                 <div class="col align-self-center text-center" v-if="status_law[1]"><img @click="change_law('law1')" src="Architecture/solve/flower/Blackflower2/Blackflower2.png" style="width: 160px; height: 160px;  "><br>
                     <p>กฎหมายลาคลอด</p>
@@ -206,7 +206,7 @@
                         @click="change_draw_law('draw_law0')"></video>  -->
                     <br>
 
-                    <p>ร่าง{{info.Draftlaw[0].DLName1}}
+                    <p class="text_seed">ร่าง{{info.Draftlaw[0].DLName1}}
                     </p>
                 </div>
                 <div class="col-4 align-self-center text-center" v-if="status_draft_law[0]"><img @click="change_draw_law('draw_law0')" src="Architecture/solve/flower/Whiteflowers/Whiteflowers.png" style="width: 8.416666666666666vw; height: 8.416666666666666vw; margin-bottom: 1vw;"><br>
@@ -221,7 +221,7 @@
                         id="vid1" width="200" height="200" muted style="margin: 0;"
                         @click="change_draw_law('draw_law1')"></video>  -->
                     <br>
-                    <p>ร่าง{{info.Draftlaw[1].DLName1}}</p>
+                    <p class="text_seed">ร่าง{{info.Draftlaw[1].DLName1}}</p>
                 </div>
                 <div class="col-4 align-self-center text-center" v-if="status_draft_law[1]"><img @click="change_draw_law('draw_law1')" src="Architecture/solve/flower/Purpleflowers/Purpleflowers.png" style="width: 8.416666666666666vw; height: 8.416666666666666vw;"><br>
                     <p>ร่าง{{info.Draftlaw[1].DLName1}}</p>
@@ -235,7 +235,7 @@
                         @click="change_draw_law('draw_law2')"></video>  -->
                     <br>
 
-                    <p class="Draft" style="margin-left: 2.5vw;">
+                    <p class="Draft text_seed" style="margin-left: 2.5vw;">
                         ร่าง{{info.Draftlaw[2].DLName1}}
                     </p>
 
@@ -254,7 +254,7 @@
                         id="vid3" width="200" height="200" muted style="margin: 0;"
                         @click="change_draw_law('draw_law3')"></video>  -->
                     <br>
-                    <p>ร่าง{{info.Draftlaw[3].DLName1}}</p>
+                    <p class="text_seed_1">ร่าง{{info.Draftlaw[3].DLName1}}</p>
                 </div>
                 <div class="col-4 align-self-center text-center" v-if="status_draft_law[3]"><img @click="change_draw_law('draw_law3')" src="Architecture/solve/flower/Blueflowers/Blueflowers.png" style="width: 8.416666666666666vw; height: 8.416666666666666vw; "><br>
                     <p>ร่าง{{info.Draftlaw[3].DLName1}}</p>
@@ -267,7 +267,7 @@
                         id="vid4" width="200" height="200" muted style="margin: 0;"
                         @click="change_draw_law('draw_law4')"></video>  -->
                     <br>
-                    <p>ร่าง{{info.Draftlaw[4].DLName1}}</p>
+                    <p class="text_seed_1">ร่าง{{info.Draftlaw[4].DLName1}}</p>
                 </div>
                 <div class="col-4 align-self-center text-center" v-if="status_draft_law[4]"><img @click="change_draw_law('draw_law4')" src="Architecture/solve/flower/Redflowers/Redflowers2.png" style="width: 7.41667vw; height: 9.41667vw;; "><br>
                     <p>ร่าง{{info.Draftlaw[4].DLName1}}</p>
