--- a/Arc/index.html
+++ b/Arc/index.html
@@ -125,7 +125,9 @@
             <div v-if="what_law == 'Main'" class="row justify-content-around">
                 <div class="col-2"></div>
                 <div class="col align-self-center text-center" v-if="!status_law[0]">
-                    <img src="Architecture/solve/flower/Anotherredflower/Anotherredseed.png" @mouseover="Blooming_flowers_gif(true, 'img5')" @mouseleave="Blooming_flowers_gif(false, 'img5')" id="img5" @click="change_law('law0')" class="seed_5">
+                    <!-- <img src="Architecture/solve/flower/Anotherredflower/Anotherredseed.png" @mouseover="Blooming_flowers_gif(true, 'img5')" @mouseleave="Blooming_flowers_gif(false, 'img5')" id="img5" @click="change_law('law0')" class="seed_5"> -->
+                    <img v-if="!hover_5" src="Architecture/solve/flower/Anotherredflower/Anotherredseed.png" @mouseover="change_hover(5, true)" @click="change_law('law0')" class="seed_5">
+                    <img v-if="hover_5" src="Architecture/solve/flower/Anotherredflower/Anotherredflower4.gif" @mouseleave="change_hover(5, false)" @click="change_law('law0')" class="gif_5">
                     <!-- <video src="Architecture/solve/flower/Anotherredflower/Anotherredflowerps.mp4"
                         @mouseover="Blooming_flowers(true, 'vid5')" @mouseleave="Blooming_flowers(false, 'vid5')"
                         id="vid5" width="200" height="200" muted style="margin-bottom: 3.1vw;"
@@ -138,7 +140,9 @@
                     <p>กฎหมายการเลือกตั้ง</p>
                 </div>
                 <div class="col align-self-center text-center" v-if="!status_law[1]">
-                    <img src="Architecture/solve/flower/Blackflower2/Blackseed2.png" @mouseover="Blooming_flowers_gif(true, 'img6')" @mouseleave="Blooming_flowers_gif(false, 'img6')" id="img6" @click="change_law('law1')"  class="seed_6">
+                    <!-- <img src="Architecture/solve/flower/Blackflower2/Blackseed2.png" @mouseover="Blooming_flowers_gif(true, 'img6')" @mouseleave="Blooming_flowers_gif(false, 'img6')" id="img6" @click="change_law('law1')"  class="seed_6"> -->
+                    <img v-if="!hover_6" src="Architecture/solve/flower/Blackflower2/Blackseed2.png" @mouseover="change_hover(6, true)" @click="change_law('law0')" class="seed_6">
+                    <img v-if="hover_6" src="Architecture/solve/flower/Blackflower2/Blackflower1.gif" @mouseleave="change_hover(6, false)" @click="change_law('law0')" class="gif_6">
                     <!-- <video src="Architecture/solve/flower/Blackflower2/Blackflowerps2.mp4"
                         @mouseover="Blooming_flowers(true, 'vid6')" @mouseleave="Blooming_flowers(false, 'vid6')"
                         id="vid6" width="200" height="250" muted style="margin: 0;" @click="change_law('law1')">
@@ -146,7 +150,7 @@
                     <br>
                     <p class="text_seed_2">กฎหมายลาคลอด</p>
                 </div>
-                <div class="col align-self-center text-center" v-if="status_law[1]"><img @click="change_law('law1')" src="Architecture/solve/flower/Blackflower2/Blackflower2.png" style="width: 160px; height: 160px;  "><br>
+                <div class="col align-self-center text-center" v-if="status_law[1]"><img @click="change_law('law1')" src="Architecture/solve/flower/Blackflower2/Blackflower2.png" style="width: 160px; height: 160px;"><br>
                     <p>กฎหมายลาคลอด</p>
                 </div>
                 <div class="col"></div>
@@ -199,7 +203,9 @@
             <div v-if="what_draft_law == 'Main'" class="row align-items-center">
 
                 <div class="col-4 align-self-center text-center" v-if="!status_draft_law[0]">
-                    <img src="Architecture/solve/flower/Whiteflowers/Whiteseed.png" @mouseover="Blooming_flowers_gif(true, 'img0')" @mouseleave="Blooming_flowers_gif(false, 'img0')" id="img0" @click="change_draw_law('draw_law0')" class="seed_0">
+                    <!-- <img src="Architecture/solve/flower/Whiteflowers/Whiteseed.png" @mouseover="Blooming_flowers_gif(true, 'img0')" @mouseleave="Blooming_flowers_gif(false, 'img0')" id="img0" @click="change_draw_law('draw_law0')" class="seed_0"> -->
+                    <img v-if="!hover_0" src="Architecture/solve/flower/Whiteflowers/Whiteseed.png" @mouseover="change_hover(0, true)" @click="change_draw_law('draw_law0')" class="seed_0">
+                    <img v-if="hover_0" src="Architecture/solve/flower/Whiteflowers/Whiteflowers1.gif" @mouseleave="change_hover(0, false)" @click="change_draw_law('draw_law0')" class="gif_0">
                     <!-- <video src="Architecture/solve/flower/Whiteflowers/Whiteflowersps.mp4"
                         @mouseover="Blooming_flowers(true, 'vid0')" @mouseleave="Blooming_flowers(false, 'vid0')"
                         id="vid0" width="200" height="200" muted style="margin: 0;"
@@ -215,7 +221,9 @@
                 </div>
 
                 <div class="col-4 align-self-center text-center" v-if="!status_draft_law[1]">
-                    <img src="Architecture/solve/flower/Purpleflowers/Purpleseed.png" @mouseover="Blooming_flowers_gif(true, 'img1')" @mouseleave="Blooming_flowers_gif(false, 'img1')" id="img1" @click="change_draw_law('draw_law1')" class="seed_1">
+                    <!-- <img src="Architecture/solve/flower/Purpleflowers/Purpleseed.png" @mouseover="Blooming_flowers_gif(true, 'img1')" @mouseleave="Blooming_flowers_gif(false, 'img1')" id="img1" @click="change_draw_law('draw_law1')" class="seed_1"> -->
+                    <img v-if="!hover_1" src="Architecture/solve/flower/Purpleflowers/Purpleseed.png" @mouseover="change_hover(1, true)" @click="change_draw_law('draw_law1')" class="seed_1">
+                    <img v-if="hover_1" src="Architecture/solve/flower/Purpleflowers/Purpleflowers1.gif" @mouseleave="change_hover(1, false)" @click="change_draw_law('draw_law1')" class="gif_1">
                     <!-- <video src="Architecture/solve/flower/Purpleflowers/Purpleflowers-3.mp4"
                         @mouseover="Blooming_flowers(true, 'vid1')" @mouseleave="Blooming_flowers(false, 'vid1')"
                         id="vid1" width="200" height="200" muted style="margin: 0;"
@@ -228,7 +236,9 @@
                 </div>
 
                 <div class="col-4 align-self-center text-center" v-if="!status_draft_law[2]">
-                    <img src="Architecture/solve/flower/Pinkflowers/Pinkseed.png" @mouseover="Blooming_flowers_gif(true, 'img2')" @mouseleave="Blooming_flowers_gif(false, 'img2')" id="img2" @click="change_draw_law('draw_law2')" class="seed_2">
+                    <!-- <img src="Architecture/solve/flower/Pinkflowers/Pinkseed.png" @mouseover="Blooming_flowers_gif(true, 'img2')" @mouseleave="Blooming_flowers_gif(false, 'img2')" id="img2" @click="change_draw_law('draw_law2')" class="seed_2"> -->
+                    <img v-if="!hover_2" src="Architecture/solve/flower/Pinkflowers/Pinkseed.png" @mouseover="change_hover(2, true)" @click="change_draw_law('draw_law2')" class="seed_2">
+                    <img v-if="hover_2" src="Architecture/solve/flower/Pinkflowers/Pinkflowers1.gif" @mouseleave="change_hover(2, false)" @click="change_draw_law('draw_law2')" class="gif_2">
                     <!-- <video src="Architecture/solve/flower/Pinkflowers/Pinkflowersps.mp4"
                         @mouseover="Blooming_flowers(true, 'vid2')" @mouseleave="Blooming_flowers(false, 'vid2')"
                         id="vid2" width="200" height="200" muted style="margin: 0;"
@@ -248,7 +258,9 @@
                 </div>
                 <div class="col-2"></div>
                 <div class="col-4 align-self-center text-center" v-if="!status_draft_law[3]">
-                    <img src="Architecture/solve/flower/Blueflowers/Blueseed.png" @mouseover="Blooming_flowers_gif(true, 'img3')" @mouseleave="Blooming_flowers_gif(false, 'img3')" id="img3" @click="change_draw_law('draw_law3')" class="seed_3">
+                    <!-- <img src="Architecture/solve/flower/Blueflowers/Blueseed.png" @mouseover="Blooming_flowers_gif(true, 'img3')" @mouseleave="Blooming_flowers_gif(false, 'img3')" id="img3" @click="change_draw_law('draw_law3')" class="seed_3"> -->
+                    <img v-if="!hover_3" src="Architecture/solve/flower/Blueflowers/Blueseed.png" @mouseover="change_hover(3, true)" @click="change_draw_law('draw_law3')" class="seed_3">
+                    <img v-if="hover_3" src="Architecture/solve/flower/Blueflowers/Blueflowers1.gif" @mouseleave="change_hover(3, false)" @click="change_draw_law('draw_law3')" class="gif_3">
                     <!-- <video src="Architecture/solve/flower/Blueflowers/Blueflowersps.mp4"
                         @mouseover="Blooming_flowers(true, 'vid3')" @mouseleave="Blooming_flowers(false, 'vid3')"
                         id="vid3" width="200" height="200" muted style="margin: 0;"
@@ -261,7 +273,9 @@
                 </div>
 
                 <div class="col-4 align-self-center text-center" v-if="!status_draft_law[4]">
-                    <img src="Architecture/solve/flower/Redflowers/Lastseed.png" @mouseover="Blooming_flowers_gif(true, 'img4')" @mouseleave="Blooming_flowers_gif(false, 'img4')" id="img4" @click="change_draw_law('draw_law4')" class="seed_4">
+                    <!-- <img src="Architecture/solve/flower/Redflowers/Lastseed.png" @mouseover="Blooming_flowers_gif(true, 'img4')" @mouseleave="Blooming_flowers_gif(false, 'img4')" id="img4" @click="change_draw_law('draw_law4')" class="seed_4"> -->
+                    <img v-if="!hover_4" src="Architecture/solve/flower/Redflowers/Lastseed.png" @mouseover="change_hover(4, true)" @click="change_draw_law('draw_law4')" class="seed_4">
+                    <img v-if="hover_4" src="Architecture/solve/flower/Redflowers/Redflowers3.gif" @mouseleave="change_hover(4, false)" @click="change_draw_law('draw_law4')" class="gif_4">
                     <!-- <video src="Architecture/solve/flower/Redflowers/Redflowersps.mp4"
                         @mouseover="Blooming_flowers(true, 'vid4')" @mouseleave="Blooming_flowers(false, 'vid4')"
                         id="vid4" width="200" height="200" muted style="margin: 0;"
@@ -445,7 +459,14 @@
             status_draft_law: [false, false, false, false, false],
             contact_mean: 0,
             time_out: "",
-            flower_gif: ["Architecture/solve/flower/Whiteflowers/Whiteflowers1.gif", "Architecture/solve/flower/Purpleflowers/Purpleflowers1.gif", "Architecture/solve/flower/Pinkflowers/Pinkflowers1.gif", "Architecture/solve/flower/Blueflowers/Blueflowers1.gif", "Architecture/solve/flower/Redflowers/Redflowers3.gif", "Architecture/solve/flower/Anotherredflower/Anotherredflower3.gif", "Architecture/solve/flower/Blackflower2/Blackflower1.gif"],
+            hover_0:false,
+            hover_1:false,
+            hover_2:false,
+            hover_3:false,
+            hover_4:false,
+            hover_5:false,
+            hover_6:false,
+            flower_gif: ["Architecture/solve/flower/Whiteflowers/Whiteflowers1.gif", "Architecture/solve/flower/Purpleflowers/Purpleflowers1.gif", "Architecture/solve/flower/Pinkflowers/Pinkflowers1.gif", "Architecture/solve/flower/Blueflowers/Blueflowers1.gif", "Architecture/solve/flower/Redflowers/Redflowers3.gif", "Architecture/solve/flower/Anotherredflower/Anotherredflower4.gif", "Architecture/solve/flower/Blackflower2/Blackflower1.gif"],
             seed_png: ["Architecture/solve/flower/Whiteflowers/Whiteseed.png", "Architecture/solve/flower/Purpleflowers/Purpleseed.png", "Architecture/solve/flower/Pinkflowers/Pinkseed.png", "Architecture/solve/flower/Blueflowers/Blueseed.png", "Architecture/solve/flower/Redflowers/Lastseed.png", "Architecture/solve/flower/Anotherredflower/Anotherredseed.png", "Architecture/solve/flower/Blackflower2/Blackseed2.png"]
         },
         methods: {
@@ -508,14 +529,31 @@
             Blooming_flowers_gif(status, id) {
                 var index = parseInt(id.slice(3));
                 var img = document.getElementById(id);
-                img.classList.remove('seed_'+index);
                 if (status) {
+                    img.classList.remove('seed_'+index);
                     img.classList.add('gif_'+index);
                     img.src = this.flower_gif[index];
                 } else {
                     img.classList.remove('gif_'+index);
                     img.classList.add('seed_'+index);
                     img.src = this.seed_png[index];
+                }
+            },
+            change_hover(index, status) {
+                if (index == 0) {
+                    this.hover_0 = status;
+                }else if (index == 1) {
+                    this.hover_1 = status;
+                }else if (index == 2) {
+                    this.hover_2 = status;
+                }else if (index == 3) {
+                    this.hover_3 = status;
+                }else if (index == 4) {
+                    this.hover_4 = status;
+                }else if (index == 5) {
+                    this.hover_5 = status;
+                }else if (index == 6) {
+                    this.hover_6 = status;
                 }
             }
         }
