--- a/Arc/index.html
+++ b/Arc/index.html
@@ -136,8 +136,8 @@
                     <br>
                     <p class="text_seed_2">กฎหมายการเลือกตั้ง</p>
                 </div>
-                <div class="col align-self-center text-center" v-if="status_law[0]"><img @click="change_law('law0')" src="Architecture/solve/flower/Anotherredflower/Anotherredflower.png" style="width: 8.1828vw; height: 10.4361vw;"><br>
-                    <p>กฎหมายการเลือกตั้ง</p>
+                <div class="img_fow col align-self-center text-center" v-if="status_law[0]"><img @click="change_law('law0')" src="Architecture/solve/flower/Anotherredflower/Anotherredflower.png" style="width: 8.1828vw; height: 10.4361vw;"><br>
+                    <p class="text_fow_00">กฎหมายการเลือกตั้ง</p>
                 </div>
                 <div class="col align-self-center text-center" v-if="!status_law[1]">
                     <!-- <img src="Architecture/solve/flower/Blackflower2/Blackseed2.png" @mouseover="Blooming_flowers_gif(true, 'img6')" @mouseleave="Blooming_flowers_gif(false, 'img6')" id="img6" @click="change_law('law1')"  class="seed_6"> -->
@@ -150,8 +150,8 @@
                     <br>
                     <p class="text_seed_2">กฎหมายลาคลอด</p>
                 </div>
-                <div class="col align-self-center text-center" v-if="status_law[1]"><img @click="change_law('law1')" src="Architecture/solve/flower/Blackflower2/Blackflower2.png" style="width: 160px; height: 160px;"><br>
-                    <p>กฎหมายลาคลอด</p>
+                <div class="img_fow_1 col align-self-center text-center" v-if="status_law[1]"><img @click="change_law('law1')" src="Architecture/solve/flower/Blackflower2/Blackflower2.png" style="width: 8.333333333333334vw; height: 8.333333333333334vw;"><br>
+                    <p class="text_fow_01">กฎหมายลาคลอด</p>
                 </div>
                 <div class="col"></div>
 
@@ -215,8 +215,8 @@
                     <p class="text_seed">ร่าง{{info.Draftlaw[0].DLName1}}
                     </p>
                 </div>
-                <div class="col-4 align-self-center text-center" v-if="status_draft_law[0]"><img @click="change_draw_law('draw_law0')" src="Architecture/solve/flower/Whiteflowers/Whiteflowers.png" style="width: 8.416666666666666vw; height: 8.416666666666666vw; margin-bottom: 1vw;"><br>
-                    <p>ร่าง{{info.Draftlaw[0].DLName1}}</p>
+                <div class="img_fow_2 col-4 align-self-center text-center" v-if="status_draft_law[0]"><img @click="change_draw_law('draw_law0')" src="Architecture/solve/flower/Whiteflowers/Whiteflowers.png" style="width: 8.416666666666666vw; height: 8.416666666666666vw; margin-bottom: 1vw;"><br>
+                    <p class="text_fow">ร่าง{{info.Draftlaw[0].DLName1}}</p>
 
                 </div>
 
@@ -231,8 +231,8 @@
                     <br>
                     <p class="text_seed">ร่าง{{info.Draftlaw[1].DLName1}}</p>
                 </div>
-                <div class="col-4 align-self-center text-center" v-if="status_draft_law[1]"><img @click="change_draw_law('draw_law1')" src="Architecture/solve/flower/Purpleflowers/Purpleflowers.png" style="width: 8.416666666666666vw; height: 8.416666666666666vw;"><br>
-                    <p>ร่าง{{info.Draftlaw[1].DLName1}}</p>
+                <div class="img_fow_2 col-4 align-self-center text-center" v-if="status_draft_law[1]"><img @click="change_draw_law('draw_law1')" src="Architecture/solve/flower/Purpleflowers/Purpleflowers.png" style="width: 8.416666666666666vw; height: 8.416666666666666vw;"><br>
+                    <p class="text_fow_1" >ร่าง{{info.Draftlaw[1].DLName1}}</p>
                 </div>
 
                 <div class="col-4 align-self-center text-center" v-if="!status_draft_law[2]">
@@ -250,7 +250,7 @@
                     </p>
 
                 </div>
-                <div class="col-4 align-self-center text-center" v-if="status_draft_law[2]"><img @click="change_draw_law('draw_law2')" src="Architecture/solve/flower/Pinkflowers/Pinkflowers.png" style="width: 8.416666666666666vw; height: 8.416666666666666vw; "><br>
+                <div class="img_fow_2 col-4 align-self-center text-center" v-if="status_draft_law[2]"><img @click="change_draw_law('draw_law2')" src="Architecture/solve/flower/Pinkflowers/Pinkflowers.png" style="width: 8.416666666666666vw; height: 8.416666666666666vw; "><br>
 
                     <p>ร่าง{{info.Draftlaw[2].DLName1}}
                     </p>
@@ -268,8 +268,8 @@
                     <br>
                     <p class="text_seed_1">ร่าง{{info.Draftlaw[3].DLName1}}</p>
                 </div>
-                <div class="col-4 align-self-center text-center" v-if="status_draft_law[3]"><img @click="change_draw_law('draw_law3')" src="Architecture/solve/flower/Blueflowers/Blueflowers.png" style="width: 8.416666666666666vw; height: 8.416666666666666vw; "><br>
-                    <p>ร่าง{{info.Draftlaw[3].DLName1}}</p>
+                <div class="img_fow_3 col-4 align-self-center text-center" v-if="status_draft_law[3]"><img @click="change_draw_law('draw_law3')" src="Architecture/solve/flower/Blueflowers/Blueflowers.png" style="width: 8.416666666666666vw; height: 8.416666666666666vw; "><br>
+                    <p class="text_fow_2">ร่าง{{info.Draftlaw[3].DLName1}}</p>
                 </div>
 
                 <div class="col-4 align-self-center text-center" v-if="!status_draft_law[4]">
@@ -282,8 +282,8 @@
                     <br>
                     <p class="text_seed_1">ร่าง{{info.Draftlaw[4].DLName1}}</p>
                 </div>
-                <div class="col-4 align-self-center text-center" v-if="status_draft_law[4]"><img @click="change_draw_law('draw_law4')" src="Architecture/solve/flower/Redflowers/Redflowers2.png" style="width: 7.41667vw; height: 9.41667vw;; "><br>
-                    <p>ร่าง{{info.Draftlaw[4].DLName1}}</p>
+                <div class="img_fow_4 col-4 align-self-center text-center" v-if="status_draft_law[4]"><img @click="change_draw_law('draw_law4')" src="Architecture/solve/flower/Redflowers/Redflowers2.png" style="width: 7.41667vw; height: 9.41667vw;; "><br>
+                    <p class="text_fow_2">ร่าง{{info.Draftlaw[4].DLName1}}</p>
                 </div>
             </div>
             <div v-if="what_draft_law == 'draw_law0'" class="row">
