--- a/Arc/index.html
+++ b/Arc/index.html
@@ -187,7 +187,7 @@
                         {{info.Law[1].LawN1}}</p>
 
 
-                    <p class="text" id="law_text2" style="text-indent: 40px; top: 10vw;">
+                    <p class="text" id="law_text2" style="text-indent: 40px; top: 10vw; width: 35vw;">
                         {{info.Law[1].LawMean1}}
                     </p>
                     <p class="text" id="law_text2" style="text-indent: 40px; width: 35vw;">
