--- a/Arc/index.html
+++ b/Arc/index.html
@@ -335,10 +335,10 @@
                     </p>
                     <p class="lay_text3 topic_text" style="font-weight: lighter; margin-top: -1vw; font-size: 1.6vw; width: 50vw;">
                         {{info.Draftlaw[2].DLName2}}</p>
-                    <p class="lay_text3_1 text" style="text-indent: 40px;">
+                    <p class="lay_text3_1 text" style="text-indent: 40px; width: 35vw;">
                         {{info.Draftlaw[2].DLMean1}}<br>
                     </p>
-                    <p class="lay_text3_1 text" style="text-indent: 40px;">{{info.Draftlaw[2].DLMean2}}</p>
+                    <p class="lay_text3_1 text" style="text-indent: 40px; width: 35vw;">{{info.Draftlaw[2].DLMean2}}</p>
                 </div>
             </div>
             <div v-if="what_draft_law == 'draw_law3'" class="row">
